ARTY_Z7/project_1/project_1.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:41:08 **** Incremental Build of configuration Debug for project helloworld ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../helloworld_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:61:9: warning: implicit declaration of function 'MYIP_mWriteReg'; did you mean 'MYIP_LED_mWriteReg'? [-Wimplicit-function-declaration]
         MYIP_mWriteReg(XPAR_MYIP_0_S00_AXI_BASEADDR, MYIP_S00_AXI_SLV_REG0_OFFSET, 0x00);
         ^~~~~~~~~~~~~~
         MYIP_LED_mWriteReg
../src/helloworld.c:61:24: error: 'XPAR_MYIP_0_S00_AXI_BASEADDR' undeclared (first use in this function); did you mean 'XPAR_MYIP_LED_0_S00_AXI_BASEADDR'?
         MYIP_mWriteReg(XPAR_MYIP_0_S00_AXI_BASEADDR, MYIP_S00_AXI_SLV_REG0_OFFSET, 0x00);
                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                        XPAR_MYIP_LED_0_S00_AXI_BASEADDR
../src/helloworld.c:61:24: note: each undeclared identifier is reported only once for each function it appears in
../src/helloworld.c:61:54: error: 'MYIP_S00_AXI_SLV_REG0_OFFSET' undeclared (first use in this function); did you mean 'MYIP_LED_S00_AXI_SLV_REG0_OFFSET'?
         MYIP_mWriteReg(XPAR_MYIP_0_S00_AXI_BASEADDR, MYIP_S00_AXI_SLV_REG0_OFFSET, 0x00);
                                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                                      MYIP_LED_S00_AXI_SLV_REG0_OFFSET
make: *** [src/subdir.mk:26: src/helloworld.o] Error 1
19:41:37 **** Incremental Build of configuration Debug for project helloworld ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../helloworld_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
'Finished building: ../src/helloworld.c'
' '
'Building target: helloworld.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../helloworld_bsp/ps7_cortexa9_0/lib -o "helloworld.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: helloworld.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size helloworld.elf  |tee "helloworld.elf.size"
   text	   data	    bss	    dec	    hex	filename
  19588	   1144	  22568	  43300	   a924	helloworld.elf
'Finished building: helloworld.elf.size'
' '
